LU-5349 llite: avoid self-deadlock around inflight RPC mutex

Since clear_inode() can be called as part of memory reclaim it need
to ensure that current thread is not already owner of mutex to
serialize inflight RPCs or it will self-deadlock when trying to
acquire it to send more close RPC.

Signed-off-by: Bruno Faccini <bruno.faccini@intel.com>
Change-Id: Iff7f7f5f9fc783823bda804c7d41a93eaa83fa7f